--- a/bg_generator.css
+++ b/bg_generator.css
@@ -1,27 +1,63 @@
+*{margin: 0;padding: 0;box-sizing: border-box;}
 body {
-	font: 'Raleway', sans-serif;
-    color: rgba(0,0,0,.5);
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: .5em;
-    top: 15%;
-	background: linear-gradient(to right, #ff0088, #00fbff); /* Standard syntax */
+  font: 'Raleway', sans-serif;
+  width: 100%;
+  color: rgba(0,0,0,.5);
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: .5em;
+  height: 100vh;
+  background: linear-gradient(to right, #cba2a2, #7cf4f4); 
+}
+
+.wrapper{
+    padding: 50px 1px;
+}
+
+h1, 
+h3, 
+#random{
+    margin-top: 30px;
 }
 
 h1 {
-    font: 600 3.5em 'Raleway', sans-serif;
-    color: rgba(0,0,0,.5);
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: .5em;
-    width: 100%;
+  font: 600 3.5em Bradley Hand ITC;
+  color: rgba(0,0,0,.7);
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  width: 100%;
 }
 
 h3 {
-	font: 900 1em 'Raleway', sans-serif;
-    color: rgba(0,0,0,.5);
-    text-align: center;
-    text-transform: none;
-    letter-spacing: 0.01em;
+  font: 600 1.3em monospace;
+  color: rgba(0,0,0,.7);
+  text-align: center;
+  text-transform: none;
+  letter-spacing: 0.01em;
+}
 
+#random{
+  padding: 10px;
+  border: none;
+  border-radius: 10px 5px;
+  background-color: #c23e82;
+  color: antiquewhite;
+  cursor: pointer;
+  transition: all 0.10s;
+}
+.color-box{
+  margin-top: 20px;
+}
+#random:active {
+  opacity: .8;
+}
+
+
+/* RESPONSIVE */
+@media only screen and (max-width:500px){
+  body{
+    /* text-align: center; */
+    background: linear-gradient(to top, #cba2a2, #7cf4f4); 
+  }
 }
