--- a/bg_generator.css
+++ b/bg_generator.css
@@ -34,6 +34,7 @@ h3 {
   color: rgba(0,0,0,.7);
   text-align: center;
   text-transform: none;
+  display: inline;
   letter-spacing: 0.01em;
 }
 
@@ -46,11 +47,22 @@ h3 {
   cursor: pointer;
   transition: all 0.10s;
 }
+
+#random:active {
+  opacity: .8;
+}
 .color-box{
   margin-top: 20px;
 }
-#random:active {
-  opacity: .8;
+
+.clip{
+  text-transform: none;
+  letter-spacing: normal;
+  padding: 6px 11px;
+  background-color: #cba2a2;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: sans-serif;
 }
 
 
